--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_light
-	base = 54559fd
-	trimbase = 
+	base = 05b4fcd
+	trimbase = 54559fd
 	parent = upstream
 	previous = f6fedfd
