--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_generic_can
-	base = ac552ca
-	trimbase = 
+	base = 23632ea
+	trimbase = ac552ca
 	parent = upstream
 	previous = f6fedfd
